--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_PORT=5432
 DB_NAME=pc_registration_db
 DB_USER=your_user
 DB_PASSWORD=your_password
+SUPERADMIN_USERNAME=superadmin
+SUPERADMIN_PASSWORD=superpassword
