--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,18 @@
 temp.cpp
 .env
 .exe
+database.cpp
+.vscode
+.env1
+dbtable.cpp
+connection.cpp
+connection.h
+dbtable.h
+dbtable.exe
+dotenv.cpp
+dotenv.h
+database.h
+database_operations.h
+dotenv.exe
+database.exe
+db_connection.cpp
